--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ let isMobileMenuOpen = false; // NEW: State for mobile menu
             </div>
 
             <!-- Core Programs (Mandatory List) -->
-            <h2 class="text-3xl font-bold text-center text-gray-800 mb-6">${t('mission_title')} / ${t('vision_title')}</h2>
+            <h2 class="text-3xl font-bold text-center text-gray-800 mb-6">Agenda</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-12">
                 ${programs.map(key => `
                     <div class="bg-white p-5 rounded-lg shadow-md border border-gray-200 flex items-start space-x-3">
